--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,49 @@
 /*  your css code here. If applicable */
+.container{
+    width: 400;
+    height: 180px;
+    padding: 20px;
+    margin: 20px;
+    background-color: #f5f5f5;
+	font-size: 10px;
+}
+h1{
+    /* background-color: aqua; */
+    padding: 10px;
+    padding-bottom: 0px;
+    margin-bottom: 10px;
+}
+.one{
+    margin-bottom: 0px;
+    padding-top: 15px;
+    padding-left: 20px;
+    border: 1px solid #DEDEDE;
+    border-bottom: none;
+    background-color: white;
+}
+.two{
+    margin-top: 0px;
+    text-align: end;
+    padding-right: 15px;
+    padding-bottom: 10px;
+    border: 1px solid #DEDEDE;
+    border-top: none;
+    background-color: white;
+}
+.three{
+    margin-bottom: 0px;
+    padding-top: 15px;
+    padding-left: 20px;
+    border: 1px solid #DEDEDE;
+    border-bottom: none;
+    background-color: white;
+}
+.four{
+    margin-top: 0px;
+    padding-right: 15px;
+    padding-bottom: 10px;
+    border: 1px solid #DEDEDE;
+    border-top: none;
+    text-align: end;
+    background-color: white;
+}
