--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ h1{
 }
 .two{
     margin-top: 0px;
-    text-align: end;
+    text-align: right;
     padding-right: 15px;
     padding-bottom: 10px;
     border: 1px solid #DEDEDE;
@@ -43,6 +43,6 @@ h1{
     padding-bottom: 10px;
     border: 1px solid #DEDEDE;
     border-top: none;
-    text-align: end;
+    text-align: right;
     background-color: white;
 }
